shaku_derive/tests/ui/inject_and_provide_same_property.stderr
error: Cannot inject and provide the same property
  --> $DIR/inject_and_provide_same_property.rs:19:5
   |
19 |     dependency: Arc<dyn DependencyTrait>,
   |     ^^^^^^^^^^
